--- a/src/main.scss
+++ b/src/main.scss
@@ -30,9 +30,11 @@
 
 
 
-html, body, .main { height: 100%; margin: 0; }
+html, body { height: 100%; margin: 0; }
 
 body {
+  display: flex;
+  align-items: center;
   background: url('pat.png') repeat;
   color: white;
   background-color: darkgrey;
@@ -41,7 +43,6 @@ body {
 
 .main {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   width: 100%;
   max-width: 960px;
@@ -70,12 +71,10 @@ body {
   background-color: white;
   color: black;
   cursor: pointer;
+  margin-right: 0.4em;
+  margin-top: 0.4em;
 
   &:hover, &.has-been-used { background-color: lightgrey; }
-
-  & + & {
-    margin-left: 0.2em;
-  }
 
   &.has-been-used {
     pointer-events: none;
@@ -85,4 +84,35 @@ body {
 
 .btn--reload {
   margin-top: 1em;
+}
+
+.aside {
+  position: relative;
+}
+
+.aside__btns {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.difficulty {
+  &-wrapper {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    display: block;
+    margin-left: 0.5em;
+    width: 1em;
+    height: 1em;
+    border: 2px solid white;
+
+    &.is-active, &:hover {
+      background-color: white;
+    }
+  }
 }
