--- a/src/main.scss
+++ b/src/main.scss
@@ -49,6 +49,12 @@ body {
   margin: 0 auto;
 }
 
+h1 {
+  font-size: 4rem;
+  font-weight: normal;
+  margin: 0;
+}
+
 .textarea {
   background-color: rgba(black, 0.4);
   border: 4px solid lightgrey;
