:wrench: Fix styles, favicon, autofocus

--- a/app/main.scss
+++ b/app/main.scss
@@ -29,6 +29,12 @@ body {
     font-family: Calibre;
 }
 
+h1 {
+    margin: 0;
+    font-size: 4rem;
+    font-weight: 500;
+}
+
 .mount {
     display: flex;
     align-items: center;
